--- a/packages/dmn-dev-sandbox-form-webapp/static/index.html
+++ b/packages/dmn-dev-sandbox-form-webapp/static/index.html
@@ -17,6 +17,7 @@
 <!DOCTYPE html>
 <html lang="en" class="pf-m-redhat-font">
   <head>
+    <!-- gtm:header -->
     <title>DMN Developer Sandbox</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -24,6 +25,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
+    <!-- gtm:body -->
     <div id="app" style="height: 100vh"></div>
     <script src="index.js"></script>
   </body>
